fix project columns alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,6 @@ div#lower-columns {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: baseline;
 }
 
 /* ==== project ==== */
